--- a/admin/index.html
+++ b/admin/index.html
@@ -7,21 +7,7 @@
     <title>Content Manager</title>
   </head>
   <body>
-    <!-- Netlify Identity for Decap CMS auth -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script>
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on('init', (user) => {
-          if (!user) {
-            window.netlifyIdentity.on('login', () => {
-              document.location.href = '/admin/';
-            });
-          }
-        });
-      }
-    </script>
-
-    <!-- Include Decap CMS from CDN -->
+    <!-- Include Decap CMS directly from CDN -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </body>
 </html>
